--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,38 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td>
-          <div style="width:50px, height:auto">
-            <%= (0...post.images.count).each do |image| %>
-              <%= image_tag(post.images[image], style:"width:30%")  %>
-              <br/>
-              <br/>
-            <% end %>
-          </div>
-        </td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<h1>Photo Repository</h1>
+<%= link_to 'Upload Photos', new_post_path %>
+<br/>
+<form action="/posts/destroy">
+<% @posts.each do |post| %>
+  <h3><b><%= post.title %><b/></h3>
+  <p>
+    <%= link_to 'Show', post %>
+    <%= link_to 'Edit', edit_post_path(post) %>
+    <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <input type="checkbox" name="Destroy" value=<%= post.id %> >Destroy<br>
+  </p>
+  <p>
+    <div style="width:50px, height:auto">
+      <%= image_tag(post.images[0], style:"width:300px")  %>
+    </div>
+  </p>
+  <hr/>
+<% end %>
+</form>
